# humanities-doc-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml  run.command  run.sh  run_windows.bat
configs/: classifier.example.yaml  global.example.yaml  renamer.example.yaml  sorter.example.yaml
src/hdt/: __about__.py  __init__.py  cli.py
src/hdt/classifier/: cli.py  engine.py
src/hdt/common/: logging_utils.py  progress.py
src/hdt/config/: loader.py
src/hdt/renamer/: cli.py  engine.py
src/hdt/sorter/: cli.py  engine.py
